making changes in html file

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="menu">
         <img
           class="image"
-          src="union-1/Normal Button/Tertiary/Icons/union.svg"
+          src="union-1/NormalButton/Tertiary/Icons/union.svg"
           alt="menu"
         />
       </div>
@@ -45,7 +45,7 @@
           <img src="twitter.svg" alt="twitter" />
         </div>
         <div class="icon2">
-          <img src="Linkedin icon.svg" alt="Linkedin" />
+          <img src="linkedinicon.svg" alt="Linkedin" />
         </div>
         <div class="icon3">
           <img src="medium.svg" alt="medium" />
