updated html file with ul and li tags to replace divs

--- a/index.html
+++ b/index.html
@@ -15,15 +15,18 @@
 
 <body>
   <header class="logo-sec">
+    <nav>
     <a href="#" class="wel">Welcome</a>
     <div class="menu">
       <img class="image" src="union-1/NormalButton/Tertiary/Icons/union.svg" alt="menu" />
     </div>
+  </nav>
   </header>
+
 
   <section class="info1">
     <div class="heading">
-      <h1 class="heading1">Hello There I'm Theodore</h1>
+      <h1 class="heading1">Hello There I'm Theodore.</h1>
       <h2 class="heading2">I am a Software Developer</h2>
     </div>
 
@@ -35,23 +38,23 @@
       </p>
     </div>
 
-    <div class="icons">
-      <div class="icon1">
+    <ul class="icons">
+      <li class="icon1">
         <img src="twitter.svg" alt="twitter" />
-      </div>
-      <div class="icon2">
+      </li>
+      <li class="icon2">
         <img src="linkedinicon.svg" alt="Linkedin" />
-      </div>
-      <div class="icon3">
+      </li>
+      <li class="icon3">
         <img src="medium.svg" alt="medium" />
-      </div>
-      <div class="icon4">
+      </li>
+      <li class="icon4">
         <img src="github.svg" alt="github" />
-      </div>
-      <div class="icon5">
+      </li>
+      <li class="icon5">
         <img src="angellist.svg" alt="angelist" />
-      </div>
-    </div>
+      </li>
+    </ul>
   </section>
 </body>
 
