--- a/index.html
+++ b/index.html
@@ -1,61 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Mobile Skeleton</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <header class="logo-sec">
+      <a href="#" class="wel">Welcome</a>
+      <nav class="menu">
+        <img
+          class="image"
+          src="union-1/NormalButton/Tertiary/Icons/Union.svg"
+          alt="menu"
+        />
+      </nav>
+    </header>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mobile Skeleton</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css" />
-</head>
+    <section class="info1">
+      <div class="heading">
+        <h1 class="heading1">Hello There I'm Theodore</h1>
+        <h2 class="heading2">I am a Software Developer</h2>
+      </div>
 
-<body>
-  <header class="logo-sec">
-    <nav>
-    <a href="#" class="wel">Welcome</a>
-    <div class="menu">
-      <img class="image" src="union-1/NormalButton/Tertiary/Icons/union.svg" alt="menu" />
-    </div>
-  </nav>
-  </header>
+      <div class="texting">
+        <p class="text1">
+          I can help you build a product , feature or website Look through some
+          of my work and experience! If you like what you see and have a project
+          you need coded, don’t hesitate to contact me.
+        </p>
+      </div>
 
-
-  <section class="info1">
-    <div class="heading">
-      <h1 class="heading1">Hello There I'm Theodore.</h1>
-      <h2 class="heading2">I am a Software Developer</h2>
-    </div>
-
-    <div class="texting">
-      <p class="text1">
-        I can help you build a product , feature or website Look through some
-        of my work and experience! If you like what you see and have a project
-        you need coded, don’t hesitate to contact me.
-      </p>
-    </div>
-
-    <ul class="icons">
-      <li class="icon1">
-        <img src="twitter.svg" alt="twitter" />
-      </li>
-      <li class="icon2">
-        <img src="linkedinicon.svg" alt="Linkedin" />
-      </li>
-      <li class="icon3">
-        <img src="medium.svg" alt="medium" />
-      </li>
-      <li class="icon4">
-        <img src="github.svg" alt="github" />
-      </li>
-      <li class="icon5">
-        <img src="angellist.svg" alt="angelist" />
-      </li>
-    </ul>
-  </section>
-</body>
-
+      <ul class="icons">
+        <li class="icon1">
+          <a href="https://twitter.com/Alberttheodore1">
+            <img src="twitter.svg" alt="twitter" />
+          </a>
+        </li>
+        <li class="icon2">
+          <a href="http://linkedin.com/in/albert-theodore-lutterodt-8059031a0">
+            <img src="linkedinicon.svg" alt="Linkedin" />
+          </a>
+        </li>
+        <li class="icon3">
+          <a href="https://medium.com/@alberttheodore17">
+            <img src="medium.svg" alt="medium" />
+          </a>
+        </li>
+        <li class="icon4">
+          <a href="https://github.com/Theodore354">
+            <img src="github.svg" alt="github" />
+          </a>
+        </li>
+        <li class="icon5">
+          <a href="https://angel.co/settings">
+            <img src="angellist.svg" alt="angelist" />
+          </a>
+        </li>
+      </ul>
+    </section>
+  </body>
 </html>
