--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <section class="info1">
       <div class="heading">
-        <h1 class="heading1">Hello There I'm Theodore</h1>
+        <h1 class="heading1">Hello There. I'm Theodore</h1>
         <h2 class="heading2">I am a Software Developer</h2>
       </div>
 
