making changes in index.html file

--- a/index.html
+++ b/index.html
@@ -193,10 +193,10 @@
             <img src="language.svg" alt="languages" class="promax1" />
             <p class="grade-title grad">Languages</p>
             <ul class="rucsht1">
-              <li class="javaScript1">javaScript</li>
-              <li class="rubyx">Ruby</li>
-              <li class="html1">Html</li>
-              <li class="css1">css</li>
+              <a href="#"><li class="javaScript1">javaScript</li></a>
+              <a href="#"><li class="rubyx">Ruby</li></a>
+              <a href="#"><li class="html1">Html</li></a>
+              <a href="#"><li class="css1">css</li></a>
             </ul>
           </div>
         </div>
@@ -207,11 +207,11 @@
             <p class="grade-title grad">Frameworks</p>
 
             <ul class="rucsht1">
-              <li class="bootstrap">Bootstrap</li>
-              <li class="rubyno">Ruby on rails</li>
-              <li class="rSpec">RSpec</li>
-              <li class="capybara">Capybara</li>
-              <li class="selenium">Selenium</li>
+              <a href="#"><li class="bootstrap">Bootstrap</li></a>
+              <a href="#"><li class="rubyno">Ruby on rails</li></a>
+              <a href="#"><li class="rSpec">RSpec</li></a>
+              <a href="#"><li class="capybara">Capybara</li></a>
+              <a href="#"><li class="selenium">Selenium</li></a>
             </ul>
           </div>
         </div>
@@ -222,11 +222,11 @@
             <p class="grade-title grad">Skills</p>
 
             <ul class="rucsht1">
-              <li class="codekit">Codekit</li>
-              <li class="github">Github</li>
-              <li class="codepen">Codepen</li>
-              <li class="gitlab">Gitlab</li>
-              <li class="terminal">Terminal</li>
+              <a href="https://codekitapp.com/"><li class="codekit">Codekit</li></a>
+              <a href="https://github.com/"><li class="github">Github</li></a>
+              <a href="https://codepen.io/theodore354"><li class="codepen">Codepen</li></a>
+              <a href="https://about.gitlab.com/"><li class="gitlab">Gitlab</li>
+              <a href="https://www.imdb.com/title/tt0362227/"><li class="terminal">Terminal</li></a>
             </ul>
           </div>
         </div>
