--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
               <a href="https://github.com/"><li class="github">Github</li></a>
               <a href="https://codepen.io/theodore354"><li class="codepen">Codepen</li></a>
               <a href="https://about.gitlab.com/"><li class="gitlab">Gitlab</li>
-              <a href="https://www.imdb.com/title/tt0362227/"><li class="terminal">Terminal</li></a>
+              <a href="#"><li class="terminal">Terminal</li></a>
             </ul>
           </div>
         </div>
