fixed spacing/layout issues and background as requested by previous reviewer
So i fixed the errors i had in the html file and added the missing images into the project folder and updated my css code

--- a/index.html
+++ b/index.html
@@ -71,165 +71,143 @@
       </p>
     </section>
 
-    <section class="main-page">
-      <h1 class="title">My Recent Works</h1>
-      <hr />
-      <div class="project_block">
-        <div class="grade1">
-          <div class="prodiv">
-            <div class="pro">
-              <p class="grade-title">Multi-Post Stories Gain+Glory</p>
-
-              <ul class="rucsht">
-                <li class="ruby">Ruby on rails</li>
-                <li class="css">css</li>
-                <li class="javaScript">javaScript</li>
-                <li class="html">html</li>
-              </ul>
-              <button class="project" type="button">See Project</button>
-            </div>
+    <section id="my-recent-works" class="d-flex">
+      <h2 class="self-center section-title-heading center-text">
+        My Recent <br />
+        Works
+      </h2>
+      <hr class="section-dash-splitter" />
+      <div class="projects column-section">
+        <section class="card d-flex flex-cols project">
+          <img src="img/Plaholder.png" alt="" />
+          <div class="d-flex description-info">
+            <h3 class="project-details center-text self-center">
+              Multi-Post Stories <br />Gain+Glory
+            </h3>
+            <ul class="project-languages">
+              <li>Ruby on rails</li>
+              <li>css</li>
+              <li>JavaScript</li>
+              <li>html</li>
+            </ul>
+            <a href="#" class="action-btn self-center">See project</a>
           </div>
-        </div>
-
-        <div class="grade2">
-          <div class="prodiv">
-            <div class="pro">
-              <p class="grade-title">Multi-Post Stories Gain+Glory</p>
-
-              <ul class="rucsht">
-                <li class="ruby">Ruby on rails</li>
-                <li class="css">css</li>
-                <li class="javaScript">javaScript</li>
-                <li class="html">html</li>
-              </ul>
-
-              <button class="project" type="button">See Project</button>
-            </div>
+        </section>
+        <section class="card d-flex flex-cols project">
+          <img src="img/Plaholder.png" alt="" />
+          <div class="d-flex description-info">
+            <h3 class="project-details center-text self-center">
+              Multi-Post Stories <br />Gain+Glory
+            </h3>
+            <ul class="project-languages">
+              <li>Ruby on rails</li>
+              <li>css</li>
+              <li>JavaScript</li>
+              <li>html</li>
+            </ul>
+            <a href="#" class="action-btn self-center">See project</a>
           </div>
-        </div>
-
-        <div class="grade3">
-          <div class="prodiv">
-            <div class="pro">
-              <p class="grade-title">Multi-Post Stories Gain+Glory</p>
-
-              <ul class="rucsht">
-                <li class="ruby">Ruby on rails</li>
-                <li class="css">css</li>
-                <li class="javaScript">javaScript</li>
-                <li class="html">html</li>
-              </ul>
-
-              <button class="project" type="button">See Project</button>
-            </div>
+        </section>
+        <section class="card d-flex flex-cols project">
+          <img src="img/Plaholder.png" alt="" />
+          <div class="d-flex description-info">
+            <h3 class="project-details center-text self-center">
+              Multi-Post Stories <br />Gain+Glory
+            </h3>
+            <ul class="project-languages">
+              <li>Ruby on rails</li>
+              <li>css</li>
+              <li>JavaScript</li>
+              <li>html</li>
+            </ul>
+            <a href="#" class="action-btn self-center">See project</a>
           </div>
-        </div>
-
-        <div class="grade4">
-          <div class="prodiv">
-            <div class="pro">
-              <p class="grade-title">Multi-Post Stories Gain+Glory</p>
-
-              <ul class="rucsht">
-                <li class="ruby">Ruby on rails</li>
-                <li class="css">css</li>
-                <li class="javaScript">javaScript</li>
-                <li class="html">html</li>
-              </ul>
-
-              <button class="project" type="button">See Project</button>
-            </div>
+        </section>
+        <section class="card d-flex flex-cols project">
+          <img src="img/Plaholder.png" alt="" />
+          <div class="d-flex description-info">
+            <h3 class="project-details center-text self-center">
+              Multi-Post Stories <br />Gain+Glory
+            </h3>
+            <ul class="project-languages">
+              <li>Ruby on rails</li>
+              <li>css</li>
+              <li>JavaScript</li>
+              <li>html</li>
+            </ul>
+            <a href="#" class="action-btn self-center">See project</a>
           </div>
-        </div>
-
-        <div class="grade5">
-          <div class="prodiv">
-            <div class="pro">
-              <p class="grade-title">Multi-Post Stories Gain+Glory</p>
-
-              <ul class="rucsht">
-                <li class="ruby">Ruby on rails</li>
-                <li class="css">css</li>
-                <li class="javaScript">javaScript</li>
-                <li class="html">html</li>
-              </ul>
-
-              <button class="project" type="button">See Project</button>
-            </div>
+        </section>
+        <section class="card d-flex flex-cols project">
+          <img src="img/Plaholder.png" alt="" />
+          <div class="d-flex description-info">
+            <h3 class="project-details center-text self-center">
+              Multi-Post Stories <br />Gain+Glory
+            </h3>
+            <ul class="project-languages">
+              <li>Ruby on rails</li>
+              <li>css</li>
+              <li>JavaScript</li>
+              <li>html</li>
+            </ul>
+            <a href="#" class="action-btn self-center">See project</a>
           </div>
-        </div>
-
-        <div class="grade6">
-          <div class="prodiv">
-            <div class="pro">
-              <p class="grade-title">Multi-Post Stories Gain+Glory</p>
-
-              <ul class="rucsht">
-                <li class="ruby">Ruby on rails</li>
-                <li class="css">css</li>
-                <li class="javaScript">javaScript</li>
-                <li class="html">html</li>
-              </ul>
-
-              <button class="project" type="button">See Project</button>
-            </div>
-          </div>
-        </div>
+        </section>
       </div>
     </section>
 
-    <section class="about">
-      <h1 class="about_title">About me</h1>
-      <p class="about_title1">
+    <section id="about-me-section">
+      <h1 class="section-title-heading flex-center self-center center-text">
+        About me
+      </h1>
+      <p class="about-me-description center-textx">
         I can help you build a product , feature or website Look through some of
         my work and experience! If you like what you see and have a project you
-        need coded, don’t hestiate to contact me.
+        need coded, don’t hesitated to contact me.
       </p>
-      <button type="button" class="project aboutlink">Get My Resume</button>
+      <span class="self-center">
+        <a href="#" class="action-btn">Get My Resume</a>
+      </span>
+    </section>
 
-      <div class="project_blockx">
-        <div class="grade11">
-          <div class="bloking">
-            <img src="language.svg" alt="languages" class="promax1" />
-            <p class="grade-title grad">Languages</p>
-            <ul class="rucsht1">
-              <li class="javaScript1">javaScript</li>
-              <li class="rubyx">Ruby</li>
-              <li class="html1">Html</li>
-              <li class="css1">css</li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="grade21">
-          <div class="bloking">
-            <img src="frame.svg" alt="Frameworks" class="promax2" />
-            <p class="grade-title grad">Frameworks</p>
-
-            <ul class="rucsht1">
-              <li class="bootstrap">Bootstrap</li>
-              <li class="rubyno">Ruby on rails</li>
-              <li class="rSpec">RSpec</li>
-              <li class="capybara">Capybara</li>
-              <li class="selenium">Selenium</li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="grade31">
-          <div class="bloking\">
-            <img src="icon-skills.svg" alt="skills" class="promax3" />
-            <p class="grade-title grad">Skills</p>
-
-            <ul class="rucsht1">
-              <li class="codekit">Codekit</li>
-              <li class="github">Github</li>
-              <li class="codepen">Codepen</li>
-              <li class="gitlab">Gitlab</li>
-              <li class="terminal">Terminal</li>
-            </ul>
-          </div>
-        </div>
+    <section id="skill-categories" class="column-section">
+      <div class="card d-flex flex-cols skill-category">
+        <span class="skill-icon self-center flex-center">
+          <img src="./language.svg" alt="" />
+        </span>
+        <h3 class="skill-title self-center">Languages</h3>
+        <ul class="skill-stack d-flex flex-center">
+          <li>JavaScript</li>
+          <li>Ruby</li>
+          <li>Html</li>
+          <li>CSS</li>
+        </ul>
+      </div>
+      <div class="card d-flex flex-cols skill-category">
+        <span class="skill-icon self-center flex-center">
+          <img src="./frame.svg" alt="" />
+        </span>
+        <h3 class="skill-title self-center">Frameworks</h3>
+        <ul class="skill-stack d-flex flex-center">
+          <li>Bootstrap</li>
+          <li>Ruby on rails</li>
+          <li>RSpec</li>
+          <li>Capybara</li>
+          <li>Selenium</li>
+        </ul>
+      </div>
+      <div class="card d-flex flex-cols skill-category">
+        <span class="skill-icon self-center flex-center">
+          <img src="./icon-skills.svg" alt="" />
+        </span>
+        <h3 class="skill-title self-center">Skills</h3>
+        <ul class="skill-stack d-flex flex-center">
+          <li>Codekit</li>
+          <li>GitHub</li>
+          <li>Codepen</li>
+          <li>Gitlab</li>
+          <li>Terminal</li>
+        </ul>
       </div>
     </section>
 
