updated html and css file

--- a/index.html
+++ b/index.html
@@ -1,221 +1,227 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mobile Skeleton</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <header class="logo-sec">
-      <a href="#" class="wel">Welcome</a>
-      <nav class="menu">
-        <img
-          class="image"
-          src="union-1/NormalButton/Tertiary/Icons/union.svg"
-          alt="menu"
-        />
-      </nav>
-    </header>
 
-    <section class="info1">
-      <div class="heading">
-        <h1 class="heading1">Hello There. I'm Theodore</h1>
-        <h2 class="heading2">I am a Software Developer</h2>
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Mobile Skeleton</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap" rel="stylesheet" />
+</head>
 
-      <div class="texting">
-        <p class="text1">
-          I can help you build a product , feature or website Look through some
-          of my work and experience! If you like what you see and have a project
-          you need coded, don’t hesitate to contact me.
-        </p>
-      </div>
+<body>
+  <header class="logo-sec">
+    <a href="#" class="wel">Welcome</a>
+    <nav class="menu">
+      <img class="image" src="union-1/NormalButton/Tertiary/Icons/union.svg" alt="menu" />
+    </nav>
+  </header>
 
-      <ul class="icons">
-        <li class="icon1">
-          <a href="https://twitter.com/Alberttheodore1">
-            <img src="twitter.svg" alt="twitter" />
-          </a>
-        </li>
-        <li class="icon2">
-          <a href="http://linkedin.com/in/albert-theodore-lutterodt-8059031a0">
-            <img src="linkedinicon.svg" alt="Linkedin" />
-          </a>
-        </li>
-        <li class="icon3">
-          <a href="https://medium.com/@alberttheodore17">
-            <img src="medium.svg" alt="medium" />
-          </a>
-        </li>
-        <li class="icon4">
-          <a href="https://github.com/Theodore354">
-            <img src="github.svg" alt="github" />
-          </a>
-        </li>
-        <li class="icon5">
-          <a href="https://angel.co/settings">
-            <img src="angellist.svg" alt="angelist" />
-          </a>
-        </li>
-      </ul>
-      <p class="actiondiv">
-        <img class="action" src="Action.svg" alt="read more arrow" />
+  <section class="info1">
+    <div class="heading">
+      <h1 class="heading1">Hello There. I'm Theodore</h1>
+      <h2 class="heading2">I am a Software Developer</h2>
+    </div>
+
+    <div class="texting">
+      <p class="text1">
+        I can help you build a product , feature or website Look through some
+        of my work and experience! If you like what you see and have a project
+        you need coded, don’t hesitate to contact me.
       </p>
-    </section>
+    </div>
 
-    <section id="my-recent-works" class="d-flex">
-      <h2 class="self-center section-title-heading center-text">
-        My Recent <br />
-        Works
-      </h2>
-      <hr class="section-dash-splitter" />
-      <div class="projects column-section">
-        <section class="card d-flex flex-cols project">
-          <img src="img/Plaholder.png" alt="" />
-          <div class="d-flex description-info">
-            <h3 class="project-details center-text self-center">
-              Multi-Post Stories <br />Gain+Glory
-            </h3>
-            <ul class="project-languages">
-              <li>Ruby on rails</li>
-              <li>css</li>
-              <li>JavaScript</li>
-              <li>html</li>
-            </ul>
-            <a href="#" class="action-btn self-center">See project</a>
-          </div>
-        </section>
-        <section class="card d-flex flex-cols project">
-          <img src="img/Plaholder.png" alt="" />
-          <div class="d-flex description-info">
-            <h3 class="project-details center-text self-center">
-              Multi-Post Stories <br />Gain+Glory
-            </h3>
-            <ul class="project-languages">
-              <li>Ruby on rails</li>
-              <li>css</li>
-              <li>JavaScript</li>
-              <li>html</li>
-            </ul>
-            <a href="#" class="action-btn self-center">See project</a>
-          </div>
-        </section>
-        <section class="card d-flex flex-cols project">
-          <img src="img/Plaholder.png" alt="" />
-          <div class="d-flex description-info">
-            <h3 class="project-details center-text self-center">
-              Multi-Post Stories <br />Gain+Glory
-            </h3>
-            <ul class="project-languages">
-              <li>Ruby on rails</li>
-              <li>css</li>
-              <li>JavaScript</li>
-              <li>html</li>
-            </ul>
-            <a href="#" class="action-btn self-center">See project</a>
-          </div>
-        </section>
-        <section class="card d-flex flex-cols project">
-          <img src="img/Plaholder.png" alt="" />
-          <div class="d-flex description-info">
-            <h3 class="project-details center-text self-center">
-              Multi-Post Stories <br />Gain+Glory
-            </h3>
-            <ul class="project-languages">
-              <li>Ruby on rails</li>
-              <li>css</li>
-              <li>JavaScript</li>
-              <li>html</li>
-            </ul>
-            <a href="#" class="action-btn self-center">See project</a>
-          </div>
-        </section>
-        <section class="card d-flex flex-cols project">
-          <img src="img/Plaholder.png" alt="" />
-          <div class="d-flex description-info">
-            <h3 class="project-details center-text self-center">
-              Multi-Post Stories <br />Gain+Glory
-            </h3>
-            <ul class="project-languages">
-              <li>Ruby on rails</li>
-              <li>css</li>
-              <li>JavaScript</li>
-              <li>html</li>
-            </ul>
-            <a href="#" class="action-btn self-center">See project</a>
-          </div>
-        </section>
-      </div>
-    </section>
+    <ul class="icons">
+      <li class="icon1">
+        <a href="https://twitter.com/Alberttheodore1">
+          <img src="twitter.svg" alt="twitter" />
+        </a>
+      </li>
+      <li class="icon2">
+        <a href="http://linkedin.com/in/albert-theodore-lutterodt-8059031a0">
+          <img src="linkedinicon.svg" alt="Linkedin" />
+        </a>
+      </li>
+      <li class="icon3">
+        <a href="https://medium.com/@alberttheodore17">
+          <img src="medium.svg" alt="medium" />
+        </a>
+      </li>
+      <li class="icon4">
+        <a href="https://github.com/Theodore354">
+          <img src="github.svg" alt="github" />
+        </a>
+      </li>
+      <li class="icon5">
+        <a href="https://angel.co/settings">
+          <img src="angellist.svg" alt="angelist" />
+        </a>
+      </li>
+    </ul>
+    <p class="actiondiv">
+      <img class="action" src="Action.svg" alt="read more arrow" />
+    </p>
+  </section>
 
-    <section id="about-me-section">
-      <h1 class="section-title-heading flex-center self-center center-text">
-        About me
-      </h1>
-      <p class="about-me-description center-textx">
-        I can help you build a product , feature or website Look through some of
-        my work and experience! If you like what you see and have a project you
-        need coded, don’t hesitated to contact me.
-      </p>
-      <span class="self-center">
-        <a href="#" class="action-btn">Get My Resume</a>
+  <section id="my-recent-works" class="d-flex">
+    <h2 class="self-center section-title-heading center-text">
+      My Recent <br />
+      Works
+    </h2>
+    <hr class="section-dash-splitter" />
+    <div class="projects column-section">
+      <section class="card d-flex flex-cols project">
+        <img src="img/Plaholder.png" alt="" />
+        <div class="d-flex description-info">
+          <h3 class="project-details center-text self-center">
+            Multi-Post Stories <br />Gain+Glory
+          </h3>
+          <ul class="project-languages">
+            <li>Ruby on rails</li>
+            <li>css</li>
+            <li>JavaScript</li>
+            <li>html</li>
+          </ul>
+          <a href="#" class="action-btn self-center">See project</a>
+        </div>
+      </section>
+      <section class="card d-flex flex-cols project">
+        <img src="img/Plaholder.png" alt="" />
+        <div class="d-flex description-info">
+          <h3 class="project-details center-text self-center">
+            Multi-Post Stories <br />Gain+Glory
+          </h3>
+          <ul class="project-languages">
+            <li>Ruby on rails</li>
+            <li>css</li>
+            <li>JavaScript</li>
+            <li>html</li>
+          </ul>
+          <a href="#" class="action-btn self-center">See project</a>
+        </div>
+      </section>
+      <section class="card d-flex flex-cols project">
+        <img src="img/Plaholder.png" alt="" />
+        <div class="d-flex description-info">
+          <h3 class="project-details center-text self-center">
+            Multi-Post Stories <br />Gain+Glory
+          </h3>
+          <ul class="project-languages">
+            <li>Ruby on rails</li>
+            <li>css</li>
+            <li>JavaScript</li>
+            <li>html</li>
+          </ul>
+          <a href="#" class="action-btn self-center">See project</a>
+        </div>
+      </section>
+      <section class="card d-flex flex-cols project">
+        <img src="img/Plaholder.png" alt="" />
+        <div class="d-flex description-info">
+          <h3 class="project-details center-text self-center">
+            Multi-Post Stories <br />Gain+Glory
+          </h3>
+          <ul class="project-languages">
+            <li>Ruby on rails</li>
+            <li>css</li>
+            <li>JavaScript</li>
+            <li>html</li>
+          </ul>
+          <a href="#" class="action-btn self-center">See project</a>
+        </div>
+      </section>
+      <section class="card d-flex flex-cols project">
+        <img src="img/Plaholder.png" alt="" />
+        <div class="d-flex description-info">
+          <h3 class="project-details center-text self-center">
+            Multi-Post Stories <br />Gain+Glory
+          </h3>
+          <ul class="project-languages">
+            <li>Ruby on rails</li>
+            <li>css</li>
+            <li>JavaScript</li>
+            <li>html</li>
+          </ul>
+          <a href="#" class="action-btn self-center">See project</a>
+        </div>
+      </section>
+    </div>
+  </section>
+
+  <section id="about-me-section">
+    <h1 class="section-title-heading flex-center self-center center-text">
+      About me
+    </h1>
+    <p class="about-me-description center-textx">
+      I can help you build a product , feature or website Look through some of
+      my work and experience! If you like what you see and have a project you
+      need coded, don’t hesitated to contact me.
+    </p>
+    <span class="self-center">
+      <a href="#" class="action-btn">Get My Resume</a>
+    </span>
+  </section>
+
+  <section id="skill-categories" class="column-section">
+    <div class="card d-flex flex-cols skill-category">
+      <span class="skill-icon self-center flex-center">
+        <img src="./language.svg" alt="" />
       </span>
-    </section>
+      <h3 class="skill-title self-center">Languages</h3>
+      <ul class="skill-stack d-flex flex-center">
+        <li>JavaScript</li>
+        <li>Ruby</li>
+        <li>Html</li>
+        <li>CSS</li>
+      </ul>
+    </div>
+    <div class="card d-flex flex-cols skill-category">
+      <span class="skill-icon self-center flex-center">
+        <img src="./frame.svg" alt="" />
+      </span>
+      <h3 class="skill-title self-center">Frameworks</h3>
+      <ul class="skill-stack d-flex flex-center">
+        <li>Bootstrap</li>
+        <li>Ruby on rails</li>
+        <li>RSpec</li>
+        <li>Capybara</li>
+        <li>Selenium</li>
+      </ul>
+    </div>
+    <div class="card d-flex flex-cols skill-category">
+      <span class="skill-icon self-center flex-center">
+        <img src="./icon-skills.svg" alt="" />
+      </span>
+      <h3 class="skill-title self-center">Skills</h3>
+      <ul class="skill-stack d-flex flex-center">
+        <li>Codekit</li>
+        <li>GitHub</li>
+        <li>Codepen</li>
+        <li>Gitlab</li>
+        <li>Terminal</li>
+      </ul>
+    </div>
+  </section>
 
-    <section id="skill-categories" class="column-section">
-      <div class="card d-flex flex-cols skill-category">
-        <span class="skill-icon self-center flex-center">
-          <img src="./language.svg" alt="" />
-        </span>
-        <h3 class="skill-title self-center">Languages</h3>
-        <ul class="skill-stack d-flex flex-center">
-          <li>JavaScript</li>
-          <li>Ruby</li>
-          <li>Html</li>
-          <li>CSS</li>
-        </ul>
-      </div>
-      <div class="card d-flex flex-cols skill-category">
-        <span class="skill-icon self-center flex-center">
-          <img src="./frame.svg" alt="" />
-        </span>
-        <h3 class="skill-title self-center">Frameworks</h3>
-        <ul class="skill-stack d-flex flex-center">
-          <li>Bootstrap</li>
-          <li>Ruby on rails</li>
-          <li>RSpec</li>
-          <li>Capybara</li>
-          <li>Selenium</li>
-        </ul>
-      </div>
-      <div class="card d-flex flex-cols skill-category">
-        <span class="skill-icon self-center flex-center">
-          <img src="./icon-skills.svg" alt="" />
-        </span>
-        <h3 class="skill-title self-center">Skills</h3>
-        <ul class="skill-stack d-flex flex-center">
-          <li>Codekit</li>
-          <li>GitHub</li>
-          <li>Codepen</li>
-          <li>Gitlab</li>
-          <li>Terminal</li>
-        </ul>
-      </div>
-    </section>
-
-    <section class="form">
+  <footer class="contact-section">
+    <section class="contact-container">
       <h3>
         I'm always interested in hearing about new projects, so if you'd like to
         chat please get in touch.
       </h3>
     </section>
-  </body>
+    <form class="input-section">
+      <ul>
+        <li><input type="text" placeholder="full name" maxlength="30" required></li>
+        <li><input type="email" placeholder="Enter your email address" required></li>
+        <li><textarea name="message" placeholder="Write your message here" maxlength="500" required></textarea></li>
+      </ul>
+      <button class="btn" type="submit">Get In Touch</button>
+    </form>
+  </footer>
+</body>
+
 </html>
