updated style.css and index file

--- a/index.html
+++ b/index.html
@@ -220,6 +220,36 @@
         <li><textarea name="message" placeholder="Write your message here" maxlength="500" required></textarea></li>
       </ul>
       <button class="btn" type="submit">Get In Touch</button>
+
+      <ul class="icons1">
+        <li class="icon11">
+          <a href="https://twitter.com/Alberttheodore1">
+            <img src="twitter.svg" alt="twitter" />
+          </a>
+        </li>
+        <li class="icon21">
+          <a href="http://linkedin.com/in/albert-theodore-lutterodt-8059031a0">
+            <img src="linkedinicon.svg" alt="Linkedin" />
+          </a>
+        </li>
+        <li class="icon31">
+          <a href="https://medium.com/@alberttheodore17">
+            <img src="medium.svg" alt="medium" />
+          </a>
+        </li>
+        <li class="icon41">
+          <a href="https://github.com/Theodore354">
+            <img src="github.svg" alt="github" />
+          </a>
+        </li>
+        <li class="icon51">
+          <a href="https://angel.co/settings">
+            <img src="angellist.svg" alt="angelist" />
+          </a>
+        </li>
+      </ul>
+    <label for="email"></label>
+    <input type="email" name="email"  value="alberttheodore17@gmail.com">
     </form>
   </footer>
 </body>
