--- a/index.html
+++ b/index.html
@@ -249,9 +249,7 @@
           </a>
         </li>
       </ul>
-    <label for="email"></label>
-    <input type="email" name="email"  value="alberttheodore17@gmail.com">
-
+    <p>alberttheodore17@gmail.com</p>
   </footer>
 </body>
 
