edited css and html file

--- a/index.html
+++ b/index.html
@@ -213,11 +213,11 @@
         chat please get in touch.
       </h3>
     </section>
-    <form class="input-section">
+    <form action="https://formspree.io/f/{form_id}" method="post" class="input-section">
       <ul>
-        <li><input type="text" placeholder="full name" maxlength="30" required></li>
-        <li><input type="email" placeholder="Enter your email address" required></li>
-        <li><textarea name="message" placeholder="Write your message here" maxlength="500" required></textarea></li>
+        <li class="my-nm"><input type="text" name="full name" placeholder="full name" maxlength="30" required></li>
+        <li class="my-add"><input type="email" name="email" placeholder="Enter your email address" required></li>
+        <li class="my-msg"><textarea name="message" placeholder="Write your message here" maxlength="500" required></textarea></li>
         <button class="btn" type="submit">Get In Touch</button>
       </ul>
     </form> 
@@ -249,7 +249,7 @@
           </a>
         </li>
       </ul>
-    <p>alberttheodore17@gmail.com</p>
+    <p class="foot-mail">alberttheodore17@gmail.com</p>
   </footer>
 </body>
 
