added formspree to index file and updated style.css

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         chat please get in touch.
       </h3>
     </section>
-    <form action="https://formspree.io/f/{form_id}" method="post" class="input-section">
+    <form action="https://formspree.io/f/xbjwrbyd" Method="POST" class="input-section">
       <ul>
         <li class="my-nm"><input type="text" name="full name" placeholder="full name" maxlength="30" required></li>
         <li class="my-add"><input type="email" name="email" placeholder="Enter your email address" required></li>
