fixed padding issue around the footer as requested by previous reviewer
In this section i fixed the padding issue in order to allow the background image in the form section to align perfectly to the right.

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
         </li>
         <li class="icon51">
           <a href="https://angel.co/settings">
-            <img src="angellist.svg" alt="angelist" />
+            <img src="angellist.svg" alt="angellist" />
           </a>
         </li>
       </ul>
