updated css file

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     <a href="#" class="wel">Welcome</a>
     <nav class="menu">
       <img class="image" src="union-1/NormalButton/Tertiary/Icons/union.svg" alt="menu" />
+      <ul class="nav-bar">
+        <li>Portfolio</li>
+        <li>About</li>
+        <li>Contact</li>
+      </ul>
     </nav>
   </header>
 
