--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     </header>
     <section id="portfolio-section" class="home-page">
         <div class="welcome-text">
-            <h1 class="intro">Hey there. I’m Tobin <br /><span>I’m a software<br/>developer</span></h1>
+            <h1 class="intro">Hey there. I’m Theodore <br /><span>I’m a software<br/>developer</span></h1>
             <p class="info">
                 I can help you build a product , feature or website Look through some of
                 my work and experience! If you like what you see and have a project you
-                need coded, don’t hestiate to contact me.
+                need coded, don’t hesitate to contact me.
             </p>
         </div> 
         <ul class="icon-list">
@@ -213,11 +213,11 @@
     <section id="contact-section" class="footer-nav">
         <div class="footer-grid">
             <h2 class="form-title">I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h2>
-            <form action="https://formspree.io/f/xyyoglkw" method="post" class="message-form">
+            <form action="https://formspree.io/f/xbjwrbyd" method="POST" class="message-form">
                 <input type="text" name="firstname" placeholder=" First Name" maxlength="30" required class="form-control input1">
                 <input type="text" name="lastname" placeholder="Last Name" maxlength="30" required class="form-control input2">
                 <input type="email" name="email" placeholder="Email" maxlength="30" required class="form-control input3">
-                <textarea name="message" placeholder="Enter message!" rows="5" maxlength="500" required class="form-control input4"></textarea>
+                <textarea name="message" placeholder="Type a  message!" rows="5" maxlength="500" required class="form-control input4"></textarea>
                 <button type="submit" class="btn-form input5">Get in touch</button>
             </form>
         </div>
@@ -241,7 +241,7 @@
             <a href="#"><i class="fa fa-angellist" aria-hidden="true"></i> </a>
             </li>
         </ul>
-        <h3 class="email-title"><a href="tobinchilongojnr@gmail.com">tobinchilongojnr@gmail.com</a></h3>
+        <h3 class="email-title"><a href="alberttheodore17@gmail.com">alberttheodore17@gmail.com</a></h3>
     </footer>
 
 
@@ -249,3 +249,4 @@
     <script src="https://use.fontawesome.com/1226aa0088.js"></script>
   </body>
 </html>
+
